hello_world/build/log/idf_py_stdout_output_1640
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.5.1\examples\get-started\hello_world\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/build/bootloader/bootloader.bin"
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/build/config -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3/register -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/spi_flash/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/main/hello_world_main.c
C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/main/hello_world_main.c: In function 'app_main':
C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/main/hello_world_main.c:18:9: error: expected identifier or '(' before '[' token
   18 |     char[100] a;
      |         ^
C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/main/hello_world_main.c:20:18: error: 'a' undeclared (first use in this function)
   20 |     scanf("%s", &a);
      |                  ^
C:/Espressif/frameworks/esp-idf-v5.5.1/examples/get-started/hello_world/main/hello_world_main.c:20:18: note: each undeclared identifier is reported only once for each function it appears in
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
